--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,11 @@ border-radius: none
 .footer-el{
 
 position: relative;
-top: 25px;
+top: 200px;
 
 
+}
+
+.offer-heading{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
